Port of winhttp network implementation to a new interface.
Changed NO_ERROR to SUCCESS, because it conflicts with a define in windows.h

Resolves: OLPEDGE-372

Signed-off-by: Mykhailo Kuchma <ext-mykhailo.kuchma@here.com>

--- a/olp-cpp-sdk-core/CMakeLists.txt
+++ b/olp-cpp-sdk-core/CMakeLists.txt
@@ -146,6 +146,10 @@ set(NETWORK2_SOURCE
     "${CMAKE_CURRENT_SOURCE_DIR}/src/network2/Network.cpp"
 )
 
+set(NETWORK2_WINHTTP_SOURCES
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/network2/winhttp/NetworkProtocolWinHttp.cpp"
+)
+
 if (ANDROID)
 file(GLOB NETWORK_ANDROID_SOURCE
     "${CMAKE_CURRENT_SOURCE_DIR}/src/network/android/*.cpp"
