--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ image: ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_VERSION}
   - docker-prod
   script:
   - $CI_PROJECT_DIR/scripts/linux/build.sh
+#  artifacts:
 #    paths:
 #      - ${ARTIFACT}
 #    reports:
