--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,14 +5,15 @@ image: ${DOCKER_REGISTRY}/${DOCKER_IMAGE}:${DOCKER_IMAGE_VERSION}
   tags:
   - docker-prod
   script:
-  - $CI_PROJECT_DIR/scripts/linux/build.sh
+  - $CI_PROJECT_DIR/scripts/linux/gitlab_build.sh
+  - $CI_PROJECT_DIR/scripts/linux/gitlab_test.sh
 #  artifacts:
 #    paths:
 #      - ${ARTIFACT}
 #    reports:
 #      junit: "*.xml"
 
-build_psv:
+build_sv:
   extends: .build
   #only:
     #- /^OLPEDGE-.*$/
